Add more statistics (#18)
* Migrate 5bld faster than 4bld to use database

* Migrate 5bld before 4bld

* Migrate average number of competitions

* Migrate average number of events

* Migrate ranges

* Migrate most sub x

* Move tsv related to the sample folder

* Adapt best ever rank to use database

* Split queries

* Fill best rank end

* Add longest streaks

* Add world records in mist events

* Add WR in most events

* Avoid page refresh like when changing query param

* Add oldest staging records and change how we get content and header from result set

* Add most persons

* Add most competitions and contries

* Fix existing tests

* Remove downloading tsv from generating stats